...
                    },
                )
            }
        },
        topBar = {
            BloomTopAppBar {
                Text(text = if (isEditMode) "Edit Task" else "Add Task")
            }
        },
    ) { paddingValues ->
        LazyColumn(
            modifier = Modifier.padding(paddingValues),
            contentPadding = PaddingValues(horizontal = 16.dp),
...
                }
            }
            item {
                BloomInputTextField(
                    modifier = Modifier
                        .fillMaxWidth()
                        .testTag("task_name_input"),
                    maxLines = 3,
                    label = {
                        Text(
                            text = "Task Name",
                            style = MaterialTheme.typography.titleSmall.copy(
                                fontWeight = FontWeight.SemiBold,
...

            item {
                BloomButton(
                    modifier = Modifier
                        .fillMaxWidth()
                        .height(56.dp)
                        .testTag("save_task_button"),
                    onClick = onClickAddTask,
                    content = {
                        Text(text = "Save")
                    },
                )
            }
...
