...
            floatingActionButtonPosition = FabPosition.Center,
            floatingActionButton = {
                FloatingActionButton(
                    modifier = Modifier
                        .offset(y = 60.dp)
                        .size(42.dp)
                        .testTag("add_task_fab"),
                    containerColor = MaterialTheme.colorScheme.primary,
                    onClick = {
                        navController.navigate(Destinations.AddTask())
                    },
                    elevation = FloatingActionButtonDefaults.elevation(
                        defaultElevation = 0.dp,
...
