...

    fun addTask(task: Task) {
        viewModelScope.launch {
            tasksRepository.addTask(task)
            reset()
            setEndTime(today().time)
            _eventsFlow.trySend(UiEvents.ShowSnackbar("Task added!"))
            _eventsFlow.trySend(UiEvents.NavigateBack)
        }
    }

    private fun reset() {
        setFocusSessions(1)
...
